# w86

./: .gitignore  CMakeLists.txt  README.md  index.css  index.js  index.xhtml  package-lock.json  package.json  tsconfig.json  w86.js  w86.wasm
src/: CMakeLists.txt  address.c  address.h  decode.c  decode.h  embind.cpp  index.ts  index.xhtml  instruction.c  instruction.h  modrm.c  modrm.h  w86.c  w86.h
test/: CMakeLists.txt  echo.S  fibonacci.S  hello.S  test.S  test.ld
ts/: index.css  index.ts  index.xhtml
